# mobrob

./: __init__.py
controllers/: DQN.py  iris_RL.py  iris_pid_eval.py  positionPID.py
envs/: __init__.py  attitude_control_env.py  gazebo_env.py  takeoff_control_env.py
envs/assets/gazebo/: start_labworld_gazebo.sh  start_liftoff_gazebo (copy).sh  start_takeoff_gazebo.sh
envs/assets/gazebo/models/mobrob_simple/: model.config  model.sdf
envs/assets/gazebo/plugins/: CMakeLists.txt  LabWorldPlugin.cpp  LabWorldPlugin.hh  QuadcopterWorldPlugin.cpp  QuadcopterWorldPlugin.hh
envs/assets/gazebo/worlds/: lab.world
